fix: Adjust margin-top for icon class in app.css for better spacing

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -7,6 +7,7 @@
     box-shadow: 0 2px 8px 0 rgba(162, 175, 155, 0.10);
     background: #EEE;
     margin-bottom: .5rem;
+    margin-top: 1rem;
     margin-right: 80%;
     display: block;
 }
